--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,6 +17,7 @@ $fallbacks-sans: helvetica, arial, sans-serif;
 $fallbacks-serif: georgia, 'times new roman', serif;
 $font-brandon: 'Brandon Grotesque', $fallbacks-sans;
 $font-lato: 'Lato', $fallbacks-sans;
+$font-merriweather: 'Merriweather', $fallbacks-serif;
 
 // Transitions
 $default-transition: all 0.2s ease-out;
