--- a/scss/bz-zootopia.scss
+++ b/scss/bz-zootopia.scss
@@ -1,5 +1,7 @@
 @import 'vars';
 @import 'intro';
+@import 'posts';
 @import 'promos';
 @import 'two-panel';
 @import 'typography';
+@import 'updates';
