--- a/scss/bz-zootopia.scss
+++ b/scss/bz-zootopia.scss
@@ -1,7 +1,10 @@
 @import 'vars';
 @import 'intro';
+@import 'layout';
 @import 'posts';
 @import 'promos';
+@import 'support';
 @import 'two-panel';
 @import 'typography';
 @import 'updates';
+@import 'zen';
