--- a/scss/_updates.scss
+++ b/scss/_updates.scss
@@ -38,6 +38,10 @@
 				h3 {
 					color: #fff;
 					margin: 8px 0 0;
+					
+					@media all and (max-width:$break-desktop) {
+						text-align: center;
+					}
 				}
 			}	
 		}
@@ -69,7 +73,7 @@
 			text-align: right;
 			
 			@media all and (max-width:$break-desktop) {
-				margin: 30px 0 15px;
+ 				text-align: center;
 			}
 			
 			li {
