--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -3,6 +3,10 @@
 		margin: 60px 0;
 		text-align: center;
 		
+		@media all and (max-width:$break-tablet) {
+			padding: 0 40px;
+		}
+		
 		h2 {
 			margin: 0 0 30px;
 		}
@@ -17,6 +21,11 @@
 			line-height: 2.5rem;
 			margin: 0 0 30px;
 			-webkit-font-smoothing: antialiased;
+			
+			@media all and (max-width:$break-tablet) {
+				font-size: 1.15rem;
+				line-height: 2rem;
+			}
 		}
 	}
 }
