--- a/scss/_zen.scss
+++ b/scss/_zen.scss
@@ -3,7 +3,7 @@
 		margin: 140px 0;
 		
 		@media all and (max-width:$break-desktop) {
-			margin: 60px 0;
+			margin: 60px 0 0;
 		}
 		
 		&__content {
