--- a/scss/_zoodles.scss
+++ b/scss/_zoodles.scss
@@ -29,6 +29,10 @@
 				h4 {
 					margin: 0 0 15px;
 				}
+				
+				p {
+					text-align: left !important;
+				}
 			}
 			
 			&__media {
@@ -56,6 +60,18 @@
 			line-height: 1.5rem;
 		}
 		
+		p {
+			text-align: center;
+			transition: $default-transition;
+			
+			&.--is-hidden {
+				max-height: 0;
+				opacity: 0;
+				overflow: hidden;
+				padding: 0;
+			}
+		}
+		
 		&__previous {
 			border-top: 1px solid $green;
 			margin: 50px 0 0;
@@ -72,6 +88,8 @@
 				max-height: 0;
 				opacity: 0;
 				overflow: hidden;
+				transition: $default-transition;
+				transition-property: max-height, opacity;
 				width: calc(25% - 27px);
 				vertical-align: top;
 				
@@ -91,7 +109,7 @@
 					content: '';
 					height: calc(100% - 40px);
 					left: 0;
-					opacity: .5;
+					opacity: .65;
 					position: absolute;
 					top: 0;
 					width: 100%;
