--- a/scss/_two-panel.scss
+++ b/scss/_two-panel.scss
@@ -25,6 +25,35 @@
 				}
 			}
 		}
+
+		&--encounters {
+
+			h2, h3 {
+				max-width: 500px;
+			}
+			
+			p {
+				max-width: 500px;
+			}
+
+			.zootopia-two-panel__image {
+				background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2020/08/18/fxkvdnh6u_Julie_Larsen_Maher_6737_Hoffman_s_Toe_toed_Sloth_WAC_BZ_07_11_18_1.png');
+				
+				&__spacer {
+					min-height: 500px;
+					
+					@media all and (max-width:$break-desktop) {
+						min-height: 300px;
+					}
+				}
+			}
+
+			.zootopia-two-panel__content {				
+				@media all and (max-width:$break-desktop) {
+					padding: 40px 20px;
+				}
+			}
+		}
 		
 		&__content {
 			display: table-cell;
