--- a/scss/_zoodles.scss
+++ b/scss/_zoodles.scss
@@ -10,13 +10,14 @@
 			display: table-row;
 			
 			&__content {
+				background-color: white;
 				border-radius: 0 6px 6px 0;
 				box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);
 				display: table-cell;
 				padding: 60px;
 				width: calc(35% - 10px);
 				vertical-align: top;
-				-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);
+				-webkit-box-shadow: 0px 0px 3px 0px rgba(124, 67, 67, 0.2);
 				-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);
 				
 				@media all and (max-width:$break-desktop) {
