--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,11 +4,16 @@ $break-mobile: '360px';
 $break-tablet: '767px';
 
 // Colors
+$black: #212426;
 $blue: #1B71B2;
 $bright-green: #00CC5B;
+$dark-gray: #706C66;
+$dark-teal: #015B5B;
 $gold: #85754E;
 $green: #36AD47;
+$green-hover: #30bd44;
 $orange: #E58A1F;
+$orange-hover: #ff8c05;
 $teal: #00A99A;
 $yellow: #FAFF00;
 
@@ -16,6 +21,7 @@ $yellow: #FAFF00;
 $fallbacks-sans: helvetica, arial, sans-serif;
 $fallbacks-serif: georgia, 'times new roman', serif;
 $font-brandon: 'Brandon Grotesque', $fallbacks-sans;
+$font-chantal: 'chantal', sans-serif;
 $font-lato: 'Lato', $fallbacks-sans;
 $font-merriweather: 'Merriweather', $fallbacks-serif;
 
