--- a/scss/bz-zootopia.scss
+++ b/scss/bz-zootopia.scss
@@ -1,12 +1,19 @@
+@import 'fonts';
 @import 'vars';
 @import 'cams';
+@import 'cams-panel';
+@import 'cards';
+@import 'feeds';
 @import 'intro';
 @import 'layout';
 @import 'posts';
 @import 'promos';
+@import 'social';
 @import 'support';
 @import 'two-panel';
+@import 'two-card-panel';
 @import 'typography';
 @import 'updates';
+@import 'virtual-membership';
 @import 'zen';
 @import 'zoodles';
