--- a/scss/_support.scss
+++ b/scss/_support.scss
@@ -47,6 +47,24 @@
 			}
 		}
 		
+		&--blue {
+			background: $blue;
+			
+			.block__description {
+				background: $orange;
+			}
+			
+			h2 {
+				margin: 0 0 15px !important;
+			}
+			
+			p {
+				color: #fff;
+				margin: 0 0 50px; 
+				text-align: center;
+			}
+		}
+		
 		h2 {
 			color: #fff;
 			font-size: 2.0625rem;
