Removed meet & greets

--- a/scss/_feeds.scss
+++ b/scss/_feeds.scss
@@ -110,10 +110,10 @@
 				position: relative;
 								
 				&::before {
-					background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/11/6cheawhqad_play.png');
+					background-image: url('https://cdn.wcs.org/2021/05/11/6cheawhqad_play.png');
 					background-repeat: no-repeat;
 					background-position: center center;
-					background-size: 75px;
+					background-size: 65px;
 					content: '';
 					display: block;
 					padding-bottom: 56.25%;
@@ -147,7 +147,7 @@
 		}
 		
 		&__more {
-			background-image: url('https://c532f75abb9c1c021b8c-e46e473f8aadb72cf2a8ea564b4e6a76.ssl.cf5.rackcdn.com/2021/05/10/96epo1b1ky_noun_Hand_drawn_arrow_2930289_1.png');
+			background-image: url('https://cdn.wcs.org/2021/05/10/96epo1b1ky_noun_Hand_drawn_arrow_2930289_1.png');
 			background-position: right top;
 			background-repeat: no-repeat;
 			background-size: 33px 33px;
