--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -6,11 +6,11 @@ $break-tablet: '767px';
 // Colors
 $black: #212426;
 $blue: #1B71B2;
-$bright-green: #00CC5B;
+$bright-green: #20812D;
 $dark-gray: #706C66;
 $dark-teal: #015B5B;
 $gold: #85754E;
-$green: #36AD47;
+$green: #20812D;
 $green-hover: #30bd44;
 $orange: #E58A1F;
 $orange-hover: #ff8c05;
