--- a/scss/bz-zootopia.scss
+++ b/scss/bz-zootopia.scss
@@ -3,6 +3,7 @@
 @import 'cams';
 @import 'cams-panel';
 @import 'cards';
+@import 'content-set';
 @import 'feeds';
 @import 'intro';
 @import 'layout';
